--- a/source/frontend/index.html
+++ b/source/frontend/index.html
@@ -1,11 +1,10 @@
-<!-- sample html file -->
 <!DOCTYPE html>
 <html>
   <head>
-    <title>My First Web Page</title>
+    <title>Home</title>
   </head>
   <body>
     <h1>Hello World!</h1>
-    <p>This is my prod web page.</p>
+    <p>Welcome to frontend.</p>
   </body>
 </html>
