--- a/source/frontend/index.html
+++ b/source/frontend/index.html
@@ -2,6 +2,22 @@
 <html>
   <head>
     <title>Home</title>
+    <style>
+      body {
+        font-family: Arial, sans-serif;
+        margin: 0;
+        padding: 0;
+        text-align: center;
+      }
+      h1 {
+        color: #333;
+        margin-top: 50px;
+      }
+      p {
+        color: #666;
+        margin-bottom: 50px;
+      }
+    </style>
   </head>
   <body>
     <h1>Hello World!</h1>
