--- a/source/frontend/index.html
+++ b/source/frontend/index.html
@@ -4,7 +4,7 @@
     <title>Home</title>
     <style>
       body {
-        font-family: Arial, sans-serif;
+        font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
         margin: 0;
         padding: 0;
         text-align: center;
