--- a/source/frontend/index.html
+++ b/source/frontend/index.html
@@ -4,7 +4,7 @@
     <title>Home</title>
     <style>
       body {
-        font-family: Arial, sans-serif;
+        font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
         margin: 0;
         padding: 0;
         text-align: center;
@@ -21,6 +21,6 @@
   </head>
   <body>
     <h1>Hello World!</h1>
-    <p>Welcome to frontend. 1.0.3</p>
+    <p>Welcome to frontend. 1.0.4</p>
   </body>
 </html>
